--- a/webapp/src/main/webapp/themes/tenderfoot/css/tenderfoot.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/tenderfoot.css
@@ -246,69 +246,35 @@ h1.vivo-logo a {
     left: -9999px;
     position: absolute;
 }
-
-#individual-hasResearchArea a {
-    font-size: 13px;
-    background: transparent;
-    border: 1px solid #337ab7;
-    color: #337ab7;
-    font-weight: 400;
-    transition: all 0.5s;
-    padding: .2em .6em .3em;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-}
-
-#individual-hasResearchArea a:hover {
-    background: #337ab7;
-    color: #fff;
-    text-decoration: none;
-}
-
-#individual-intro h1 {
+h2 {
+    padding: 10px 0 12px 0;
+    margin: 0;
     font-size: 1.375em;
+    color: #064d68;
+    line-height: 1.5em;
+}
+h2 a {
     color: #2485ae;
-    float: left;
 }
-
-#individual-intro #iconControlsRightSide {
-    float: right;
-    background-color: #fff;
-    margin-right: 10px;
-    padding-top: 4px;
-    padding-left: 4px;
-    padding-right: 4px;
+h2 a:link,
+h2 a:visited {
+    text-decoration: underline;
 }
-
-#individual-intro span.display-title {
-    padding-left: 10px;
-    margin-left: 10px;
+h3 {
+    padding: 10px 0 12px 0;
+    margin: 0;
+    font-size: 1.125em;
+    color: #064d68;
 }
-
-#individual-intro span.display-title, h1.fn .display-title {
-    font-size: .825em;
-    border-left: 1px solid #a6b1b0;
+h4 {
+    padding: 10px 0 12px 0;
+    margin: 0;
+    font-size: 1em;
+    color: #064d68;
 }
-
-ul#individual-hasResearchArea li,
-ul#individual-facultyMemberships li {
-    float: left;
-    padding-right: 10px;
-    margin-right: 10px;
-    border-right: none;
-}
-
-.jumbotron {
-    background-color: transparent;
-    color: #ffffff;
-    text-align: center;
-    text-shadow: 1px 1px 4px #000;
-}
-
-.jumbotron p {
-    color: #dddddd;
-}
-
-.hero {
-    background: #283a4b;
+h5 {
+    padding: 10px 0 12px 0;
+    margin: 0;
+    font-size: .875em;
+    color: #064d68;
 }
