--- a/webapp/src/main/webapp/themes/tenderfoot/css/screen.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/screen.css
@@ -25,6 +25,7 @@ VIVO tenderfoot theme: screen styles
 @import url("page-browse.css");
 @import url("page-home.css");
 @import url("page-imageupload.css");
+@import url("page-index.css");
 @import url("page-individual.css");
 @import url("page-login.css");
 @import url("page-menu.css");
