--- a/webapp/src/main/webapp/themes/tenderfoot/css/page-individual.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/page-individual.css
@@ -105,6 +105,27 @@ ul#individual-facultyMemberships li {
     margin-right: 10px;
     border-right: none;
 }
+
+.edit-mainImage {
+    position: absolute;
+    background: rgba(255, 255, 255, 0.6);
+    padding: 0 6px 0 0;
+    top: 6px;
+    left: 21px;
+}
+a.edit-mainImage img.edit-individual {
+    border: 0;
+    padding-left: 0px;
+    margin-left: 8px;
+}
+.delete-mainImage {
+    position: absolute;
+    top: 6px;
+    left: 51px;
+    background: rgba(255, 255, 255, 0.6);
+    padding: 0 6px 0 8px;
+}
+
 #admin {
     background-color: #f3f3f0;
     margin-top: 15px;
