Header layout tweak

--- a/webapp/src/main/webapp/themes/tenderfoot/css/page-individual.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/page-individual.css
@@ -155,3 +155,9 @@ section.vcard {
 section#preferredTitle {
     float: left;
 }
+
+section#preferredTitle h2 {
+    float: left;
+    font-size: 1em;
+    color: #ccc;
+}
