--- a/webapp/src/main/webapp/themes/tenderfoot/css/screen.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/screen.css
@@ -21,6 +21,7 @@ VIVO tenderfoot theme: screen styles
 @import url("reset.css");
 @import url("tenderfoot.css");
 @import url("edit.css");
+@import url("navbar-breakpoint.css");
 @import url("page-admin.css");
 @import url("page-browse.css");
 @import url("page-home.css");
