Add comment to CSS

--- a/webapp/src/main/webapp/themes/tenderfoot/css/tenderfoot.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/tenderfoot.css
@@ -16,6 +16,13 @@ legend {
     width: 100%;
     z-index: 10;
 }
+/*
+    If you don't want navbar that anchors to the top of the screen, replace with
+
+    #nav.affix {
+        position: relative;
+    }
+ */
 
 #nav .container {
     padding-left: 0px;
