--- a/webapp/src/main/webapp/themes/wilma/css/screen.css
+++ b/webapp/src/main/webapp/themes/wilma/css/screen.css
@@ -24,3 +24,4 @@ VIVO wilma theme: screen styles
 
 @import url("reset.css");
 @import url("wilma.css");
+@import url("../../../local/css/local.css");
