[VIVO-1415] Claiming interface for DOI and PMID

--- a/webapp/src/main/webapp/themes/tenderfoot/css/screen.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/screen.css
@@ -30,5 +30,6 @@ VIVO tenderfoot theme: screen styles
 @import url("page-individual.css");
 @import url("page-login.css");
 @import url("page-menu.css");
+@import url("page-createAndLink.css");
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans");
 @import url("../../../local/css/local.css");
