Check Editor already claimed, error for no citation, PUMCIDs fixed

--- a/webapp/src/main/webapp/themes/tenderfoot/css/page-createAndLink.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/page-createAndLink.css
@@ -1,3 +1,13 @@
+.citation_error:before {
+    content: url('../../../images/createAndLink/error.png');
+    zoom: 50%;
+    margin-top: 10px;
+    margin-right: 10px;
+    float: left;
+}
+.citation_error {
+    height: 70px;
+}
 .citation_claimed:before {
     content: url('../../../images/createAndLink/tick.png');
     zoom: 75%; margin-left: 535px;
