--- a/webapp/src/main/webapp/themes/wilma/css/screen.css
+++ b/webapp/src/main/webapp/themes/wilma/css/screen.css
@@ -24,4 +24,5 @@ VIVO wilma theme: screen styles
 
 @import url("reset.css");
 @import url("wilma.css");
+@import url("page-createAndLink.css");
 @import url("../../../local/css/local.css");
