--- a/webapp/src/main/webapp/themes/wilma/css/page-createAndLink.css
+++ b/webapp/src/main/webapp/themes/wilma/css/page-createAndLink.css
@@ -1,3 +1,11 @@
+#createAndLink select {
+    height: 2.5em;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    padding-top: 0px;
+}
+
 #createAndLink .citation_error:before {
     content: url('../../../images/createAndLink/error.png');
     transform: scale(0.5);
