Fix visualization tool css selector

--- a/webapp/src/main/webapp/css/visualization/visualization.css
+++ b/webapp/src/main/webapp/css/visualization/visualization.css
@@ -106,9 +106,6 @@ span.incomplete-data-holder,
 /* ---------------------------*/
 /* Visualization Tools -------*/
 /* ---------------------------*/
-section.visualizationTools h3, p {
-    margin-left:20px;
-}
-section.visualizationTools p {
+section.visualizationTools h3, section.visualizationTools p {
     margin-left:20px;
 }
