--- a/webapp/src/main/webapp/themes/tenderfoot/css/page-home.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/page-home.css
@@ -62,8 +62,19 @@
     float: left;
     clear: both;
 }
-#home-research ul {
-    padding: 0.7em 0 0.6em 0.75em;
+#home-research table {
+	margin: 0.7em 0 0.6em 35px;
+    width: calc(100% - 35px);
+}
+#home-research th:nth-child(1) {
+    text-align: left;
+}
+#home-research th:nth-child(2) {
+    text-align: center;
+}
+#home-research td:nth-child(2) {
+    text-align: center;
+    padding-top: 0.6em;
 }
 #home-research li {
     line-height: 1.25em;
@@ -74,13 +85,12 @@
     text-align:right;
     padding: 4px 16px 0 0;
 }
-#home-research li span {
+#home-research td span {
     color: #fff;
     background: url(../../../images/count-background.png) no-repeat;
     width: 65px;
     height: 27px;
     display: inline-block;
-    padding: 6px 8px 0 0;
     margin-left: 4px;
     text-align: center;
 }
