fixing issues with layout

--- a/webapp/src/main/webapp/themes/tenderfoot/css/tenderfoot.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/tenderfoot.css
@@ -201,6 +201,9 @@ input.search-vivo {
     margin-top: 5px;
     padding: 0;
 }
+input[type="search" i] {
+    margin: 2px;
+}
 #search-form-modifier {
     display: none;
 }
