--- a/webapp/src/main/webapp/themes/tenderfoot/css/page-home.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/page-home.css
@@ -83,7 +83,7 @@
 }
 #home-research li:last-child {
     text-align:right;
-    padding: 4px 16px 0 0;
+    padding: 4px 16px 8px 0;
 }
 #home-research td span {
     color: #fff;
