--- a/webapp/src/main/webapp/themes/wilma/css/wilma.css
+++ b/webapp/src/main/webapp/themes/wilma/css/wilma.css
@@ -1002,6 +1002,7 @@ a.view-all-style {
 #home-stats {
 	margin-top: 30px;
     width: 100%;
+    height: 100%;
     padding-bottom: 30px;
 }
 
@@ -1101,7 +1102,7 @@ a.view-all-style {
 	padding: 0.4em 0 0.6em 1.8em;
 }
 
-#home-academic-depts ul:nth-child(1) {
+#home-academic-depts ul:nth-child(2) {
     position: absolute;
     bottom: 0;
     right: 0;
