Minor fix in Capability map page

--- a/webapp/src/main/webapp/themes/wilma/css/wilma.css
+++ b/webapp/src/main/webapp/themes/wilma/css/wilma.css
@@ -2109,6 +2109,10 @@ span.subclassExpandMinus {
     
 }
 
+#cutofflabel {
+    width: initial;
+}
+
 #queryform input[type="text"], select, input[type="password"]{
     max-width: 100%;
 }
