--- a/webapp/src/main/webapp/themes/wilma/css/screen.css
+++ b/webapp/src/main/webapp/themes/wilma/css/screen.css
@@ -22,6 +22,7 @@ VIVO wilma theme: screen styles
 
 @charset "UTF-8";
 
+@import url("../../../bootstrap-5.3.2/css/bootstrap.css");
 @import url("reset.css");
 @import url("wilma.css");
 @import url("page-createAndLink.css");
