--- a/webapp/src/main/webapp/themes/wilma/css/wilma.css
+++ b/webapp/src/main/webapp/themes/wilma/css/wilma.css
@@ -145,6 +145,7 @@ input.block {
 label {
     margin-top: .5em;
     margin-bottom: .5em;
+    display: block;
 }
 label.inline {
     display: inline;
@@ -288,17 +289,17 @@ p.submit {
     border-color: #dfe6e6;
 }
 
-.editingForm td {
+.editingForm > table > tbody > tr > td.verticalfieldlabel {
     padding: 3px;
 }
 
-.editingForm tr > td:first-child {
+.editingForm > table > tbody > tr > td.verticalfieldlabel:first-child {
     width: 40%;
 }
 
 
 @media (min-width: 768px) {
-    .editingForm tr > td:first-child {
+    .editingForm > table > tbody > tr > td.verticalfieldlabel:first-child {
         width: 15%;
     }
 }
@@ -723,13 +724,13 @@ ul.individual-urls-people li a {
 /* LOG IN------>  */
 #login {
     /* float: right; */
-    /* width: 314px; */
+    max-width: 332px;
     border: 1px solid #e8ece9;
     /* margin-right: 25px; */
     padding-bottom: 30px;
     margin-bottom: 30px;
     overflow: hidden;
-    margin-top: 20px;
+    margin-top: 30px;
     padding: 15px;
 }
 body.login #login {
@@ -767,7 +768,7 @@ h3.internal-auth:hover {
 }
 
 #login-form > div {
-    padding: 38px;
+    padding: 10px 28px;
 }
 
 #login-form label {
@@ -859,13 +860,10 @@ p.password-note {
     padding: .25em;
     margin-bottom: 8px;
 }
-/* #flash-msg-container,
+#flash-msg-container,
 #welcome-msg-container {
-    margin-bottom: 8px;
-    margin-top: -10px;
-    margin-right:-10px;
-    height:34px;
-} */
+    padding: 10px;
+}
 p.external-auth {
     margin: 0 auto;
 }
@@ -1868,10 +1866,6 @@ p.address-line {
 /* ------------------------------------------------->  */
 /* SITE ADMIN DASHBOARD ---------------------------->  */
 /* ------------------------------------------------->  */
-#adminDashboard {
-    display: flex;
-    flex-wrap: wrap;
-}
 
 #adminDashboard .pageBodyGroup {
   padding: 0 1em .5em 1em;
@@ -2321,10 +2315,10 @@ span.subclassExpandMinus {
     line-height: unset;
 }
 
-table.form-background tr td {
+/* table.form-background tr td {
     width: 100%;
     display: block;
-}
+} */
 
 #wrapper-content > div > div > div > div > table > tbody > tr > td > div > form > div {
     display: flex;
@@ -2340,9 +2334,9 @@ table.form-background tr td {
 }
 
 table.classHierarchy {
-    min-width: auto;
-    width: 100%;
-    margin-left: 0;
+    min-width: initial;
+    max-width: initial;
+    width: calc(100% - 25);
 }
 
 section#container div {
