--- a/webapp/src/main/webapp/themes/nemo/css/theme.css
+++ b/webapp/src/main/webapp/themes/nemo/css/theme.css
@@ -268,3 +268,47 @@ These are helper classes to add margin gaps where needed
 .input-group-header-search {
 	
 }
+
+/* ------------------------------------------------->  */
+/* TOOLTIP  ---------------------------------------->  */
+/* ------------------------------------------------->  */
+.vivoTooltip {
+  opacity: 1 !important;
+  --bs-tooltip-max-width: 400px !important;
+}
+
+.vivoTooltip > .tooltip-inner {
+  background-color: #f1f2ee;
+  border: 1px solid #F1D031;
+  text-align: left;
+  border-radius: 0;
+  color: #333;
+}
+
+.vivoTooltip > .tooltip-inner h5 {
+  padding-bottom: 0;
+}
+
+.vivoTooltip > .tooltip-arrow::before {
+  --bs-tooltip-bg: #F1D031;
+}
+
+.tooltip:not(.vivoTooltip) > .tooltip-inner, .tooltip:not(.vivoTooltip) > .tooltip-inner * {
+  color: unset;
+}
+
+.downloadTip {
+  --bs-tooltip-max-width: 600px !important;
+}
+
+.vivoTooltip-yellow {
+  --bs-tooltip-max-width: 500px !important;
+}
+
+.vivoTooltip-yellow > .tooltip-inner {
+  background-color: #ffffc0;
+  font-size: 0.8em;
+  padding: 20px 22px;
+  text-align: left;
+  line-height: 12px;
+} 
