--- a/webapp/src/main/webapp/themes/tenderfoot/css/tenderfoot.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/tenderfoot.css
@@ -8,6 +8,8 @@ legend {
 
 #nav {
     background: #f7f9f9;
+    position: sticky;
+    top: 0;
 }
 
 #nav.affix {
@@ -365,3 +367,48 @@ img.add-individual {
     height: 15px;
     width: 15px;
 }
+
+/* ------------------------------------------------->  */
+/* TOOLTIP  ---------------------------------------->  */
+/* ------------------------------------------------->  */
+.vivoTooltip {
+    opacity: 1 !important;
+    --bs-tooltip-max-width: 400px !important;
+  }
+  
+  .vivoTooltip > .tooltip-inner {
+    background-color: #f1f2ee;
+    border: 1px solid #F1D031;
+    text-align: left;
+    border-radius: 0;
+    color: #333;
+    max-width: initial;
+  }
+  
+  .vivoTooltip > .tooltip-inner h5 {
+    padding-bottom: 0;
+  }
+  
+  .vivoTooltip > .tooltip-arrow::before {
+    --bs-tooltip-bg: #F1D031;
+  }
+  
+  .tooltip:not(.vivoTooltip) > .tooltip-inner, .tooltip:not(.vivoTooltip) > .tooltip-inner * {
+    color: unset;
+  }
+  
+  .downloadTip {
+    --bs-tooltip-max-width: 600px !important;
+  }
+  
+  .vivoTooltip-yellow {
+    --bs-tooltip-max-width: 500px !important;
+  }
+  
+  .vivoTooltip-yellow > .tooltip-inner {
+    background-color: #ffffc0;
+    font-size: 0.8em;
+    padding: 20px 22px;
+    text-align: left;
+    line-height: 12px;
+  } 
