--- a/webapp/src/main/webapp/css/visualization/mapofscience/layout.css
+++ b/webapp/src/main/webapp/css/visualization/mapofscience/layout.css
@@ -271,6 +271,11 @@ a.map-of-science-links {
     color: #2485AE;
 }
 
+.visCommonControllTooltip {
+    padding: 16px 22px;
+    max-width: 400px;
+}
+
 /* -------------------------------------------------------------->  */
 /* SPECIAL STYLES FOR THE error  */
 /* -------------------------------------------------------------->  */
